Trying to work around OpenJDK bug